# KeePassEx

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KeePassEx_MVP.py  KeePassEx_Product_Plan.md  LICENSE  Makefile  README.md  SECURITY.md  jobs.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  runs.json  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.kiro/steering/: product.md  project.md  structure.md  tech.md
apps/browser-extension/: manifest.chrome.json  manifest.firefox.json  package.json  popup.html  tsconfig.json  vite.config.ts  vitest.config.ts
apps/browser-extension/src/: background.ts  content.ts
apps/browser-extension/src/__tests__/: background.test.ts
apps/browser-extension/src/popup/: Popup.tsx
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  output.rs
apps/cli/src/commands/: add.rs  audit.rs  breach.rs  clip.rs  compare.rs  delete.rs  edit.rs  export.rs  find.rs  generate.rs  get.rs  group.rs  hardware_key.rs  health.rs  import.rs  list.rs  mod.rs  otp.rs  passwd.rs  rotation.rs  search.rs  server.rs  shard.rs  show.rs  stats.rs  steg.rs  sync.rs  tag.rs  template.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/native-messaging/: com.keepassex.app.firefox.json  com.keepassex.app.json
apps/desktop/src-tauri/src/: autotype.rs  lib.rs  main.rs  native_messaging.rs  ssh_agent_server.rs  state.rs  tray.rs
apps/desktop/src-tauri/src/commands/: ai_cmd.rs  analytics_cmd.rs  attachments.rs  audit_log_cmd.rs  autotype_cmd.rs  backup.rs  breach.rs  clipboard.rs  emergency_access_cmd.rs  entries.rs  favicon.rs  field_references.rs  generator.rs  groups.rs  hardware_key.rs  health.rs  import_export.rs  mod.rs  otp.rs  passkey_cmd.rs  password_advisor_cmd.rs  plugins_cmd.rs  policy_cmd.rs  pqc_cmd.rs  rotation_cmd.rs  search_cmd.rs  settings.rs  ssh.rs  ssh_entry_cmd.rs  steg_cmd.rs  sync_cmd.rs  team_cmd.rs  updater_cmd.rs  vault.rs  vault_compare_cmd.rs
apps/desktop/src/__tests__/: components.test.tsx  pages.test.tsx  store.test.ts
apps/desktop/src/components/: AttachmentViewer.tsx  BulkActionBar.tsx  CommandPalette.tsx  CustomFieldEditor.tsx  EntryIconPicker.tsx  EntryRow.tsx  ErrorBoundary.tsx  ExpiryBanner.tsx  GroupTree.tsx  IdleLockManager.tsx  KeyboardShortcutsHelp.tsx  NaturalLanguageSearch.tsx  OtpSetupDialog.tsx  PasswordStrengthBar.tsx  QuickEntryCreator.tsx  SearchBar.tsx  TagInput.tsx  VaultTabBar.tsx
apps/desktop/src/layouts/: MainLayout.tsx
apps/desktop/src/pages/: AnalyticsPage.tsx  AuditLogPage.tsx  BackupPage.tsx  BreachPage.tsx  EmergencyAccessPage.tsx  EntryDetailPage.tsx  GeneratorPage.tsx  HardwareKeyPage.tsx  HealthPage.tsx  ImportExportPage.tsx  PasswordPolicyPage.tsx  PluginsPage.tsx  SecurityPage.tsx  SettingsPage.tsx  StatisticsPage.tsx  SteganographyPage.tsx  SyncPage.tsx  TeamPage.tsx  UnlockPage.tsx  VaultComparePage.tsx  VaultPage.tsx  WelcomePage.tsx
apps/desktop/src/store/: breach.ts  settings.ts  sync.ts  tabs.ts  vault.ts
apps/desktop/src/styles/: globals.css
apps/macos-menubar/KeePassExMenuBar/: KeePassExMenuBarApp.swift  MenuBarView.swift  MenuBarViewModel.swift
apps/mobile/: app.json  index.js  metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/mobile/android/: build.gradle  gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle  proguard-rules.pro
apps/mobile/ios/: Podfile
apps/mobile/ios/KeePassEx/: AppDelegate.swift  Info.plist
apps/mobile/ios/KeePassExAutofill/: CredentialProviderViewController.swift
apps/mobile/ios/KeePassExCore/: KeePassExCore.m  KeePassExCore.swift
apps/mobile/ios/KeePassExWidget/: KeePassExWidget.swift
apps/mobile/src/: App.tsx
apps/mobile/src/__tests__/: screens.test.tsx
apps/mobile/src/components/: EmptyState.tsx  OtpCountdown.tsx  PasswordField.tsx  SectionHeader.tsx  TagList.tsx  index.ts
apps/mobile/src/native/: SecureEnclaveKeystore.ts
apps/mobile/src/screens/: AnalyticsScreen.tsx  AttachmentViewerScreen.tsx  BreachScreen.tsx  ChangePasswordScreen.tsx  EmergencyAccessScreen.tsx  EntryDetailScreen.tsx  EntryEditScreen.tsx  EntryHistoryScreen.tsx  GeneratorScreen.tsx  GroupsScreen.tsx  HealthScreen.tsx  ImportExportScreen.tsx  OtpScreen.tsx  PasswordAdvisorScreen.tsx  PluginsScreen.tsx  RotationScreen.tsx  SecureNoteScreen.tsx  SecuritySettingsScreen.tsx  (+6 more)
apps/server/: Cargo.toml  Dockerfile  docker-compose.yml
apps/server/helm/keepassex-server/: Chart.yaml  values.yaml
apps/server/helm/keepassex-server/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
apps/server/src/: config.rs  error.rs  main.rs  rate_limit.rs
apps/server/src/api/: admin.rs  auth.rs  health.rs  mod.rs  vault.rs
apps/server/src/auth/: mod.rs
apps/server/src/db/: mod.rs
apps/server/src/ws/: handler.rs  mod.rs
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  commands.rs  events.rs  main.rs  ui.rs
apps/watch/wearos/: build.gradle  settings.gradle
apps/windows-credprov/: Cargo.toml
apps/windows-credprov/src/: credential.rs  lib.rs  provider.rs  registry.rs  tile.rs
docs/: API.md  ARCHITECTURE.md  BREAKTHROUGH_FEATURES.md  BUILD.md  CLI_SCRIPTING.md  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  IMPORT_EXPORT.md  NATIVE_PLATFORMS.md  PLUGIN_DEVELOPMENT.md  RELEASE.md  ROADMAP.md  ROADMAP_2026.md  SECURITY_MODEL.md  SYNC.md  TESTING.md  TROUBLESHOOTING.md
scripts/: gen_icons.py  gen_locales.py  rebuild_locales.py  sync_i18n.py  test_e2e.rs
shared/constants/: package.json
shared/constants/src/: index.ts
shared/types/: package.json
shared/types/src/: index.ts
shared/utils/: package.json  tsconfig.json  vitest.config.ts
shared/utils/src/: index.ts  nl-search.ts
test/: setup.ts
(+34 files in other folders)
