[workspace]
resolver = "2"
members = [
    "packages/core",
    "apps/cli",
    "apps/desktop/src-tauri",
    "apps/tui",
    "apps/windows-credprov",
    "apps/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KeePassEx Team"]
license = "GPL-3.0"
repository = "https://github.com/keepassex/keepassex"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
chacha20 = "0.9"
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
# Encoding
hex = "0.4"
base32 = "0.4"
base64 = "0.22"
# URL encoding
urlencoding = "2.1"
# Async traits
async-trait = "0.1"
# HTTP client (sync providers, HIBP)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# XML parsing (KDBX)
quick-xml = { version = "0.37", features = ["serialize"] }
# Compression
flate2 = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Test utilities
tempfile = "3.14"
# Internal crates
keepassex-core = { path = "packages/core" }
