[package]
name = "keepassex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KeePassEx CLI — command-line vault management"

[[bin]]
name = "kpx"
path = "src/main.rs"

[dependencies]
keepassex-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.3"
colored = "2.2"
tabled = "0.17"
indicatif = "0.17"
tracing.workspace = true
tracing-subscriber.workspace = true
