[package]
name = "keepassex-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KeePassEx Desktop — Tauri v2 backend"

[lib]
name = "keepassex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keepassex-core.workspace = true
tauri = { version = "2", features = [
    "tray-icon",
    "image-ico",
    "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
zeroize.workspace = true
base64.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
